--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "counter-api",
 	"license": "MIT",
+	"module": "src/index.tsx",
 	"type": "module",
 	"scripts": {
 		"uno": "unocss src/**/*.tsx --preflights --minify --out-file static/uno.css",
