feat: Migrate from typed-html to @kitajs/html

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "counter-api",
-	"license": "MIT",
-	"module": "src/index.tsx",
-	"type": "module",
-	"scripts": {
-		"uno": "unocss src/**/*.tsx --preflights --minify --out-file static/uno.css",
-		"dev": "concurrently 'bun run uno -- --watch' 'bun run --hot src/index.tsx'"
-	},
-	"devDependencies": {
-		"bun-types": "latest",
-		"concurrently": "^8.2.0",
-		"typed-html": "^3.0.1",
-		"unocss": "^0.55.0"
-	},
-	"peerDependencies": {
-		"typescript": "^5.0.0"
-	},
-	"dependencies": {
-		"hono": "^3.4.1"
-	}
+  "name": "counter-api",
+  "license": "MIT",
+  "module": "src/index.tsx",
+  "type": "module",
+  "scripts": {
+    "uno": "unocss src/**/*.tsx --preflights --minify --out-file static/uno.css",
+    "dev": "concurrently 'bun run uno -- --watch' 'bun run --hot src/index.tsx'"
+  },
+  "devDependencies": {
+    "bun-types": "latest",
+    "concurrently": "^8.2.0",
+    "unocss": "^0.55.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@kitajs/html": "^2.1.2",
+    "hono": "^3.4.1"
+  }
 }
